<?xml version="1.0" encoding="utf-8"?>
<!-- row.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#454545"
    android:orientation="horizontal"
    android:paddingBottom="6dip"
    android:paddingTop="4dip" >

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/acronym"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/exam_title"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ngr"
        android:textColor="#ffffff" />
    
     <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/espb"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/reg_type"
        android:textColor="#ffffff" />
    
    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_count"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/profesor"
        android:textColor="#ffffff" />

</LinearLayout>